# ghri

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Vagrantfile  build.rs  install.sh  tarpaulin-report.html  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: build-ghri.yml  release.yml
src/: cleanup.rs  lib.rs  main.rs  retry.rs  runtime.rs
src/application/: install.rs  link.rs  list.rs  mod.rs  prune.rs  remove.rs  show.rs  update.rs  upgrade.rs
src/archive/: mod.rs  tar_gz.rs  zip.rs
src/asset/: mod.rs  picker.rs  platform.rs
src/commands/: config.rs  link.rs  link_check.rs  link_spec.rs  links.rs  list.rs  mod.rs  paths.rs  prune.rs  remove.rs  services.rs  show.rs  symlink.rs  unlink.rs  update.rs  upgrade.rs
src/commands/install/: download.rs  external_links.rs  installer.rs  mod.rs  repo_spec.rs  ui.rs
src/domain/: mod.rs
src/domain/model/: context.rs  link.rs  mod.rs  package.rs  release.rs  version.rs
src/domain/service/: install_manager.rs  link_manager.rs  mod.rs  package_repository.rs  release_installer.rs
src/download/: mod.rs
src/github/: client.rs  mod.rs  repo.rs  types.rs
src/http/: client.rs  mod.rs  retry.rs
src/install/: config.rs  mod.rs  paths.rs  symlink.rs
src/package/: discovery.rs  link.rs  link_rule.rs  meta.rs  mod.rs  repository.rs  version.rs
src/platform/: detection.rs  mod.rs  picker.rs
src/provider/: factory.rs  github.rs  mod.rs  registry.rs
src/runtime/: env.rs  fs.rs  mod.rs  path.rs  symlink.rs  user.rs
src/source/: github.rs  mod.rs  registry.rs
tests/: e2e_test.sh  integration_test.rs
