[package]
name = "ghri"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.80"
clap = { version = "4.5.53", features = ["derive", "env"] }
dirs = "6.0.0"
env_logger = "0.11.8"
flate2 = "1.1.5"
futures-util = "0.3.31"
log = "0.4.29"
openssl = { version = "0.10.75", features = ["vendored"] }
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.14"
mockito = "1.6.0"
tempfile = "3.10.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["user"] }

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"