[package]
name = "ghri"
version = "0.0.0-dev" # Actual version is determined by git tags at build time
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.80"
clap = { version = "4.5.53", features = ["derive", "env"] }
dirs = "6.0.0"
flate2 = "1.1.5"
glob = "0.3"
goblin = "0.10.4"
log = "0.4.29"
pathdiff = "0.2.3"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0.14"
mockall = "0.14.0"
mockito = "1.6.0"
predicates = "3.1.3"
tempfile = "3.10.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["user"] }

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"

[features]
default = []
